--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <p1> Radio Check.Control confirmed</p1>
         <p2>hi there !!</p2>
         <p>prepare for a bumpy flight ahead. storms a brewin.</p>
+        <p>Got it. check one two check one two. landing sequence engaged.</p>
     </body>
 </html>
