--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <body>
+ <head>
+   <link rel="stylesheet" type="text/css" href="style.css">
+ </head>
+<body>
         <p>Radio check. Pilot, please confirm.</p>
         <p1> Radio Check.Control confirmed</p1>
         <p2>hi there !!</p2>
