--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
         <p>Radio check. Pilot, please confirm.</p>
         <p1> Radio Check.Control confirmed</p1>
-        <p2>hi there !!</p2>
+        <p2>hi there !! ~~making a change on the open-mic branch~~</p2>
     </body>
 </html>
